fix profile overflow issue round 2

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -109,7 +109,7 @@
   .profile__name {
     font-size: 22px;
     padding-right: 10px;
-    max-width: 200px;
+    max-width: 275px;
   }
   .profile__edit-button {
     margin: 0;
